// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PancakeSwap Universal Router Infinity-Bin Pool Command Generation Test > Infinity-BIN > should encode a multi-hop exactInput in Infinity BIN: CAKE->ETH->USDC 1`] = `
[
  {
    "command": "INFI_SWAP",
    "args": [],
    "actions": [
      {
        "action": "BIN_SWAP_EXACT_IN",
        "args": [
          {
            "type": "tuple",
            "name": "params",
            "value": {
              "currencyIn": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898",
              "path": [
                {
                  "intermediateCurrency": "0x0000000000000000000000000000000000000000",
                  "fee": 500,
                  "hooks": "0x0000000000000000000000000000000000000000",
                  "poolManager": "0x0000000000000000000000000000000000000000",
                  "hookData": "0x",
                  "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
                },
                {
                  "intermediateCurrency": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
                  "fee": 500,
                  "hooks": "0x0000000000000000000000000000000000000000",
                  "poolManager": "0x0000000000000000000000000000000000000000",
                  "hookData": "0x",
                  "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
                }
              ],
              "amountIn": "10000",
              "amountOutMinimum": "952"
            }
          }
        ]
      },
      {
        "action": "SETTLE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "10000"
          },
          {
            "type": "bool",
            "name": "payerIsUser",
            "value": true
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      }
    ]
  }
]
`;

exports[`PancakeSwap Universal Router Infinity-Bin Pool Command Generation Test > Infinity-BIN > should encode a multi-hop exactOutput in Infinity BIN: USDC->ETH->CAKE 1`] = `
[
  {
    "command": "INFI_SWAP",
    "args": [],
    "actions": [
      {
        "action": "BIN_SWAP_EXACT_OUT",
        "args": [
          {
            "type": "tuple",
            "name": "params",
            "value": {
              "currencyOut": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898",
              "path": [
                {
                  "intermediateCurrency": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
                  "fee": 500,
                  "hooks": "0x0000000000000000000000000000000000000000",
                  "poolManager": "0x0000000000000000000000000000000000000000",
                  "hookData": "0x",
                  "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
                },
                {
                  "intermediateCurrency": "0x0000000000000000000000000000000000000000",
                  "fee": 500,
                  "hooks": "0x0000000000000000000000000000000000000000",
                  "poolManager": "0x0000000000000000000000000000000000000000",
                  "hookData": "0x",
                  "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
                }
              ],
              "amountOut": "10000",
              "amountInMaximum": "1050"
            }
          }
        ]
      },
      {
        "action": "SETTLE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "1050"
          },
          {
            "type": "bool",
            "name": "payerIsUser",
            "value": true
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      }
    ]
  }
]
`;

exports[`PancakeSwap Universal Router Infinity-Bin Pool Command Generation Test > Infinity-BIN > should encode a single exactInput CAKE->ETH BIN swap oneForZero 1`] = `
[
  {
    "command": "INFI_SWAP",
    "args": [],
    "actions": [
      {
        "action": "BIN_SWAP_EXACT_IN_SINGLE",
        "args": [
          {
            "type": "tuple",
            "name": "params",
            "value": {
              "poolKey": {
                "currency0": "0x0000000000000000000000000000000000000000",
                "currency1": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898",
                "hooks": "0x0000000000000000000000000000000000000000",
                "poolManager": "0x0000000000000000000000000000000000000000",
                "fee": 500,
                "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
              },
              "zeroForOne": false,
              "amountIn": "10000",
              "amountOutMinimum": "47",
              "hookData": "0x0000000000000000000000000000000000000000"
            }
          }
        ]
      },
      {
        "action": "SETTLE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "10000"
          },
          {
            "type": "bool",
            "name": "payerIsUser",
            "value": true
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x0000000000000000000000000000000000000000"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      }
    ]
  }
]
`;

exports[`PancakeSwap Universal Router Infinity-Bin Pool Command Generation Test > Infinity-BIN > should encode a single exactInput ETH-CAKE BIN swap zeroForOne 1`] = `
[
  {
    "command": "INFI_SWAP",
    "args": [],
    "actions": [
      {
        "action": "BIN_SWAP_EXACT_IN_SINGLE",
        "args": [
          {
            "type": "tuple",
            "name": "params",
            "value": {
              "poolKey": {
                "currency0": "0x0000000000000000000000000000000000000000",
                "currency1": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898",
                "hooks": "0x0000000000000000000000000000000000000000",
                "poolManager": "0x0000000000000000000000000000000000000000",
                "fee": 500,
                "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
              },
              "zeroForOne": true,
              "amountIn": "10000000000000000",
              "amountOutMinimum": "952380952380952380",
              "hookData": "0x0000000000000000000000000000000000000000"
            }
          }
        ]
      },
      {
        "action": "SETTLE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x0000000000000000000000000000000000000000"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "10000000000000000"
          },
          {
            "type": "bool",
            "name": "payerIsUser",
            "value": true
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      }
    ]
  }
]
`;

exports[`PancakeSwap Universal Router Infinity-Bin Pool Command Generation Test > Infinity-BIN > should encode a single exactOutput CAKE-ETH BIN swap OneForZero 1`] = `
[
  {
    "command": "INFI_SWAP",
    "args": [],
    "actions": [
      {
        "action": "BIN_SWAP_EXACT_OUT_SINGLE",
        "args": [
          {
            "type": "tuple",
            "name": "params",
            "value": {
              "poolKey": {
                "currency0": "0x0000000000000000000000000000000000000000",
                "currency1": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898",
                "hooks": "0x0000000000000000000000000000000000000000",
                "poolManager": "0x0000000000000000000000000000000000000000",
                "fee": 500,
                "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
              },
              "zeroForOne": false,
              "amountOut": "30",
              "amountInMaximum": "10500",
              "hookData": "0x0000000000000000000000000000000000000000"
            }
          }
        ]
      },
      {
        "action": "SETTLE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "10500"
          },
          {
            "type": "bool",
            "name": "payerIsUser",
            "value": true
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x0000000000000000000000000000000000000000"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      }
    ]
  }
]
`;

exports[`PancakeSwap Universal Router Infinity-Bin Pool Command Generation Test > Infinity-BIN > should encode a single exactOutput ETH_CAKE BIN swap zeroForOne 1`] = `
[
  {
    "command": "INFI_SWAP",
    "args": [],
    "actions": [
      {
        "action": "BIN_SWAP_EXACT_OUT_SINGLE",
        "args": [
          {
            "type": "tuple",
            "name": "params",
            "value": {
              "poolKey": {
                "currency0": "0x0000000000000000000000000000000000000000",
                "currency1": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898",
                "hooks": "0x0000000000000000000000000000000000000000",
                "poolManager": "0x0000000000000000000000000000000000000000",
                "fee": 500,
                "parameters": "0x0000000000000000000000000000000000000000000000000000000000050000"
              },
              "zeroForOne": true,
              "amountOut": "10000",
              "amountInMaximum": "52",
              "hookData": "0x0000000000000000000000000000000000000000"
            }
          }
        ]
      },
      {
        "action": "SETTLE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x0000000000000000000000000000000000000000"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "52"
          },
          {
            "type": "bool",
            "name": "payerIsUser",
            "value": true
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x152649eA73beAb28c5b49B26eb48f7EAD6d4c898"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      },
      {
        "action": "TAKE",
        "args": [
          {
            "type": "address",
            "name": "currency",
            "value": "0x0000000000000000000000000000000000000000"
          },
          {
            "type": "address",
            "name": "recipient",
            "value": "0x0000000000000000000000000000000000000001"
          },
          {
            "type": "uint256",
            "name": "amount",
            "value": "0"
          }
        ]
      }
    ]
  }
]
`;
